<resources>
    <string name="app_name">Simple Stopwatch and Timer</string>
    <string name="tab_stopwatch">stopwatch</string>
    <string name="tab_timer">timer</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="default_stopwatch_format">00:00:00:00</string>
    <string name="h">H</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="colon">:</string>
    <string name="lap">lap</string>
</resources>
