<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout2">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="52sp"
            android:text="@string/default_stopwatch_format"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarStyle"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white">

        <Button
            android:id="@+id/start"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/start"
            android:textColor="@color/white"
            android:background="@drawable/accessory_button"/>

        <Button
            android:id="@+id/reset"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_margin="5dp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:background="@drawable/accessory_button"/>

    </LinearLayout>

</RelativeLayout>